--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,17 @@
 ---
-title: "mrislambd.github.io"
+title: "Welcome"
 ---
+<p align="center">
+    <img src="_assets/images/giphy.gif" alt="galaxy">
+</p>
 
-This is a Quarto website.
+<div style="text-align: justify">
+Welcome to my website! I am currently a Ph.D. candidate in the Mathematics Department at Florida State University, where I also serve as a Graduate Teaching Assistant. My academic journey has been both diverse and enriching, spanning multiple institutions and fields of study. <br>
+<br>
+Before joining FSU, I earned a second master’s degree in Mathematics from Youngstown State University in Ohio, USA. Prior to that, I completed my undergraduate degree in Mathematics at the University of Dhaka (DU), Bangladesh, followed by a one-year integrated master’s program in Applied Mathematics at the same institution.<br>
+<br>
+After graduating from DU, I gained valuable industry experience by working for two years in the life insurance sector in Dhaka, Bangladesh. In pursuit of higher education and advanced research opportunities, I relocated to the United States in August 2018.<br>
+<br>
+As a lifelong student and researcher of mathematics, my research interests are centered around Theoretical Machine Learning, Computational Finance, and various other areas of applied mathematics. I am passionate about advancing knowledge in these fields and contributing to their practical applications.
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
-
-```{r}
-1 + 1
-```
+</div>
