--- a/teaching/fall23.qmd
+++ b/teaching/fall23.qmd
@@ -6,4 +6,6 @@ permalink: /teaching/2023-fall-teaching
 venue: "Department of Mathematics, Florida State University"
 date: 2023-12-04
 location: "Tallahassee, Florida"
----
+---  
+
+Worked as a greader for this course.
