--- a/posts/welcome/index.qmd
+++ b/posts/welcome/index.qmd
@@ -9,7 +9,7 @@ lightbox: true
 filters:
   - social-share
 share:
-  permalink: "https://mrislambd.github.io/blog/welcome"
+  permalink: "https://mrislambd.github.io/blog/posts/welcome"
   description: "Blog welcome page"
   twitter: true
   facebook: true
@@ -21,8 +21,19 @@ share:
   mastodon: true
 ---
 
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v20.0" nonce="Ke3klkvy"></script>
+
+
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v20.0" nonce="6JywAW9T"></script>
+
 Here is a demo picture
 
 ![](/_assets/images/ada.png){.preview-class}
 
 
+<div class="fb-comments" data-href="https://mrislambd.github.io/posts/welcome/" data-width="" data-numposts="5"></div>  
+
+
+<div class="fb-share-button" data-href="https://mrislambd.github.io/posts/welcome/" data-layout="" data-size=""><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fmrislambd.github.io%2Fposts%2Fwelcome%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>  
