--- a/posts/mathbiology/index.qmd
+++ b/posts/mathbiology/index.qmd
@@ -3,26 +3,11 @@ title: 'Modeling viral disease'
 date: 2021-02-23
 author: "Rafiq Islam"
 author-affiliation: "UCF"
-categories:
-  - Applied Mathematics
-  - Math Biology
-  - Mathematical Modeling
+categories: [Applied Mathematics, Math Biology, Mathematical Modeling]
 citation: true
 search: true
 lightbox: true
-filters:
-  - social-share
-share:
-  permalink: /blog/posts/mathbiology/ 
-  description: "Modeling viral diseases"
-  twitter: true
-  facebook: true
-  reddit: true
-  stumble: true
-  tumblr: true
-  linkedin: true
-  email: true
-  mastodon: true
+image: b1.png
 ---
 
 Consider the spreading of a highly communicable disease on an isolated island
@@ -136,4 +121,30 @@ Solving the above system we have $k=\frac{1}{2N}$ and $c=\frac{-1.5}{N}$. If we 
   X(t)&=\frac{N}{1+e^{-\left(\frac{t}{2}-1.5\right)}}
 \end{align*}    
 So, $X(12)\approx 4945$  
+
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v20.0" nonce="LLmYyE8W"></script>
+
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v20.0" nonce="xi3MqdlY"></script>  
+
+**Share on**  
+
+<div class="share-buttons">
+  <div class="fb-share-button" data-href="https://mrislambd.github.io/posts/mathbiology/" data-layout="" data-size=""><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fmrislambd.github.io%2Fposts%2Fmathbiology%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div> 
+
+  <script src="https://platform.linkedin.com/in.js" type="text/javascript">lang: en_US</script>
+  <script type="IN/Share" data-url="https://mrislambd.github.io/posts/mathbiology/"></script>  
+</div>
+
+
+<div class="fb-comments" data-href="https://mrislambd.github.io/posts/mathbiology/" data-width="650" data-numposts="5"></div>  
+
+
+
+
+
+
+
+
 
