--- a/posts/mathbiology/index.qmd
+++ b/posts/mathbiology/index.qmd
@@ -8,6 +8,13 @@ citation: true
 search: true
 lightbox: true
 image: b1.png
+listing: 
+    contents: "/../../posts"
+    max-items: 3
+    type: grid
+    categories: false
+    date-format: full
+    fields: [image, date, title, author, reading-time]
 ---
 
 Consider the spreading of a highly communicable disease on an isolated island
@@ -135,10 +142,16 @@ So, $X(12)\approx 4945$
 
   <script src="https://platform.linkedin.com/in.js" type="text/javascript">lang: en_US</script>
   <script type="IN/Share" data-url="https://mrislambd.github.io/posts/mathbiology/"></script>  
+
+  <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button"  data-url="https://mrislambd.github.io/posts/mathbiology/" data-show-count="false">Tweet</a>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>  
 </div>
 
 
 <div class="fb-comments" data-href="https://mrislambd.github.io/posts/mathbiology/" data-width="650" data-numposts="5"></div>  
+
+
+**You may also like**  
 
 
 
