Google Adsense added to each page

--- a/cv.qmd
+++ b/cv.qmd
@@ -36,6 +36,9 @@ cv:
 </p>
 ```  
 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6878992848042528"
+     crossorigin="anonymous"></script>
+
 ## Education  
 - Ph.D in Mathematics, Florida State University; Florida, USA 2026 (expected)
 - M.S. in Mathematics, Youngstown State University; Ohio, USA 2020
