--- a/portfolio/dp-nlp/index.qmd
+++ b/portfolio/dp-nlp/index.qmd
@@ -8,6 +8,9 @@ search: true
 lightbox: true
 ---  
 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6878992848042528"
+     crossorigin="anonymous"></script>  
+
 **Team Members**  
 Rebecca Ceppas de Castro, Fulya Tastan, Philip Barron, Mohammad Rafiqul Islam, Nina Adhikari, Viraj Meruliya  
 
