--- a/posts/sgd-linreg/index.qmd
+++ b/posts/sgd-linreg/index.qmd
@@ -14,7 +14,10 @@ listing:
     categories: false
     date-format: full
     fields: [image, date, title, author, reading-time]
----
+---  
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6878992848042528"
+     crossorigin="anonymous"></script>
 
 Linear regression is a fundamental algorithm in machine learning used for predicting a continuous dependent variable based on one or more independent variables. The objective is to find the best-fit line that minimizes the difference between the predicted and actual values.  
 
