--- a/teaching/f18-f21.qmd
+++ b/teaching/f18-f21.qmd
@@ -6,7 +6,10 @@ permalink: /teaching/2018-2020-teaching
 venue: "Department of Mathematics, Youngstown State University"
 date: 2020-05-04
 location: "Youngstown, Ohio"
----
+---  
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6878992848042528"
+     crossorigin="anonymous"></script>  
 
 
 Responsible for the preparation and delivery of all lectures, making question paper for all exams, and the grading of tests and homework assignments for the following courses:
