--- a/teaching/fall23.qmd
+++ b/teaching/fall23.qmd
@@ -8,4 +8,7 @@ date: 2023-12-04
 location: "Tallahassee, Florida"
 ---  
 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6878992848042528"
+     crossorigin="anonymous"></script>  
+
 Worked as a greader for this course.
