--- a/blog.qmd
+++ b/blog.qmd
@@ -9,4 +9,7 @@ listing:
     fields: [image, date, title, author, reading-time]
     sort-ui: [title, date]
     feed: true
----
+---  
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6878992848042528"
+     crossorigin="anonymous"></script>
