--- a/portfolio.qmd
+++ b/portfolio.qmd
@@ -10,3 +10,6 @@ listing:
   feed: true
 ---  
 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6878992848042528"
+     crossorigin="anonymous"></script>
+
