--- a/portfolio/desgld/desgld.qmd
+++ b/portfolio/desgld/desgld.qmd
@@ -8,6 +8,9 @@ search: true
 lightbox: true
 ---  
 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6878992848042528"
+     crossorigin="anonymous"></script>  
+
 ![](pypi.png)
 
 This package is related to my ongoing project "EXTRA decentralized stochastic gradient Langevin dynamics". The detail of the package can be found <a href="https://mrislambd.github.io/desgld_package/desgld/" target="_blank">here</a>
