--- a/posts/welcome/index.qmd
+++ b/posts/welcome/index.qmd
@@ -14,7 +14,10 @@ listing:
     categories: false
     date-format: full
     fields: [image, date, title, author, reading-time]
----
+---  
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6878992848042528"
+     crossorigin="anonymous"></script>  
 
 Here is a demo picture  
 
