--- a/research.qmd
+++ b/research.qmd
@@ -7,7 +7,10 @@ listing:
   filter-ui: false
   sort-ui: false
   fields: [date,title]
----
+---  
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6878992848042528"
+     crossorigin="anonymous"></script>
 
 <img src="/_assets/images/research.webp" width=500 height=300 style="display: block; margin: 0 auto;">
 
