--- a/teaching.qmd
+++ b/teaching.qmd
@@ -7,3 +7,6 @@ listing:
   sort: "date desc"
   feed: true
 ---  
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6878992848042528"
+     crossorigin="anonymous"></script>
