--- a/posts/matmul/index.qmd
+++ b/posts/matmul/index.qmd
@@ -207,7 +207,7 @@ May be some other day we can talk about these algorithms.
 **Share on**  
 
 <div class="share-buttons">
- <div class="fb-share-button" data-href="https://mrislambd.github.io/posts/matmul/" data-layout=""       data-size="large"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fmrislambd.github.io%2Fposts%2Fmatmul%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>  
+ <div class="fb-share-button" data-href="https://mrislambd.github.io/posts/matmul/" data-layout="button_count"       data-size="small"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fmrislambd.github.io%2Fposts%2Fmatmul%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>  
  
  <script src="https://platform.linkedin.com/in.js" type="text/javascript">lang: en_US</script>  
  <script type="IN/Share" data-url="https://mrislambd.github.io/posts/matmul/"></script>  
