--- a/portfolio/desgld/index.qmd
+++ b/portfolio/desgld/index.qmd
@@ -18,14 +18,24 @@ This package is related to my ongoing project "EXTRA decentralized stochastic gr
 
 **Share on**  
 
-```{=html}
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous"
+ src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v20.0"></script>
+ 
 <div class="share-buttons">
-     <div id="fb-root"></div>
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v20.0" nonce="Z9VpOKne"></script>
-<div class="fb-share-button" data-href="https://mrislambd.github.io/portfolio/desgld/desgld.html" data-layout="button_count" data-size="small"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fmrislambd.github.io%2Fportfolio%2Fdesgld%2Fdesgld.html&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>  
-<script src="https://platform.linkedin.com/in.js" type="text/javascript">lang: en_US</script>  
-<script type="IN/Share" data-url="https://mrislambd.github.io/portfolio/desgld/desgld.html"></script>  
-<a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button"  data-url="https://mrislambd.github.io/portfolio/desgld/desgld.html" data-show-count="false">Tweet</a>  
+<div class="fb-share-button" data-href="https://mrislambd.github.io/portfolio/desgld/"
+data-layout="button_count" data-size="small"><a target="_blank" 
+ href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fmrislambd.github.io%2Fportfolio%2Fdesgld%2F&amp;src=sdkpreparse" 
+ class="fb-xfbml-parse-ignore">Share</a></div>
+
+<script src="https://platform.linkedin.com/in.js" type="text/javascript">lang: en_US</script>
+<script type="IN/Share" data-url="https://mrislambd.github.io/portfolio/desgld/"></script> 
+ 
+<a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" 
+ data-url="https://mrislambd.github.io/portfolio/desgld/" data-show-count="true">Tweet</a>
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </div>
-```
+
+<div class="fb-comments" data-href="https://mrislambd.github.io/portfolio/desgld/"
+ data-width="" data-numposts="5"></div>
+
