--- a/posts/some-proofs/index.qmd
+++ b/posts/some-proofs/index.qmd
@@ -82,20 +82,21 @@ $x_h=max\{|x_i|: 1\le i \le n\}$ \& $>0$. Here we are assuming $x_h >0$ because 
  src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v20.0"></script>
  
 <div class="share-buttons">
-<div class="fb-share-button" data-href="https://mrislambd.github.io/posts/eigen/some-proofs/"
+<div class="fb-share-button" data-href="https://mrislambd.github.io/posts/some-proofs/"
 data-layout="button_count" data-size="small"><a target="_blank" 
- href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fmrislambd.github.io%2Fposts%2Feigen%2Fsome-proofs%2F&amp;src=sdkpreparse" 
+ href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fmrislambd.github.io%2Fposts%2Fsome-proofs%2F&amp;src=sdkpreparse" 
  class="fb-xfbml-parse-ignore">Share</a></div>
 
 <script src="https://platform.linkedin.com/in.js" type="text/javascript">lang: en_US</script>
-<script type="IN/Share" data-url="https://mrislambd.github.io/posts/eigen/some-proofs/"></script> 
+<script type="IN/Share" data-url="https://mrislambd.github.io/posts/some-proofs/"></script> 
  
 <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" 
- data-url="https://mrislambd.github.io/posts/eigen/some-proofs/" data-show-count="true">Tweet</a>
+ data-url="https://mrislambd.github.io/posts/some-proofs/" data-show-count="true">Tweet</a>
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </div>
 
-<div class="fb-comments" data-href="https://mrislambd.github.io/posts/eigen/some-proofs/"
+<div class="fb-comments" data-href="https://mrislambd.github.io/posts/some-proofs/"
  data-width="" data-numposts="5"></div>
+
   
 **You may also like**
