--- a/publication/pub1/index.qmd
+++ b/publication/pub1/index.qmd
@@ -34,19 +34,17 @@ Download a pdf from [here](/publication/pub1/paper1.pdf)
  src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v20.0"></script>
  
 <div class="share-buttons">
-<div class="fb-share-button" data-href="https://mrislambd.github.io/publications/pub1"
+<div class="fb-share-button" data-href="https://mrislambd.github.io/publication/pub1/"
 data-layout="button_count" data-size="small"><a target="_blank" 
- href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fmrislambd.github.io%2Fpublications%2Fpub1&amp;src=sdkpreparse" 
+ href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fmrislambd.github.io%2Fpublication%2Fpub1%2F&amp;src=sdkpreparse" 
  class="fb-xfbml-parse-ignore">Share</a></div>
 
 <script src="https://platform.linkedin.com/in.js" type="text/javascript">lang: en_US</script>
-<script type="IN/Share" data-url="https://mrislambd.github.io/publications/pub1"></script> 
+<script type="IN/Share" data-url="https://mrislambd.github.io/publication/pub1/"></script> 
  
 <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" 
- data-url="https://mrislambd.github.io/publications/pub1" data-show-count="true">Tweet</a>
+ data-url="https://mrislambd.github.io/publication/pub1/" data-show-count="true">Tweet</a>
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </div>
-
-
 
 
