--- a/portfolio/dp-nlp/index.qmd
+++ b/portfolio/dp-nlp/index.qmd
@@ -6,6 +6,7 @@ collection: portfolio
 citation: true
 search: true
 lightbox: true
+image: dpnlp.jpg
 ---  
 
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6878992848042528"
