--- a/portfolio/desgld/index.qmd
+++ b/portfolio/desgld/index.qmd
@@ -6,13 +6,13 @@ collection: portfolio
 citation: true
 search: true
 lightbox: true
-image: pypi.png
+image: pypi.jpg
 ---  
 
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6878992848042528"
      crossorigin="anonymous"></script>  
 
-![](pypi.png)
+![](pypi.jpg)
 
 This package is related to my ongoing project "EXTRA decentralized stochastic gradient Langevin dynamics". The detail of the package can be found <a href="https://mrislambd.github.io/desgld_package/desgld/" target="_blank">here</a>  
 
